[workspace]

members = [
    "basic",
    "math",
    "collection",
    "advanced",
    "error",
    "functional",
    "test_crate",
    "smart_pointer",
    "object",
    "other",
    "concurrency",
    "grep",
    "async_server",
    "async_client",
    "wasm",
    "echo_server",
    "echo_client",
    "framing",
    "playground",
]