[workspace]

members = [
    "basic",
    "math",
    "collection",
    "advanced",
    "error",
    "functional",
    "test_crate",
    "smart_pointer",
    "object",
    "other",
    "concurrency",
    "grep",
    "async_server",
    "async_client",
    "wasm",
    "echo_server",
    "echo_client",
    "framing",
    "playground",
    "tokio_study",
    "game_of_life",
    "netpoller",
    "tauri",
]

[workspace.package]
authors = "JeongYunSung"
repository = "https://github.com/JeongYunSung/trpl"
edition = "2021"